--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,30 @@
 <!DOCTYPE html>
-{% load static %}
-<link rel="stylesheet" href="{% static 'css/style.css' %}">
-{% include "parts/navbar.html" %}
-{% block content %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>products shop</title>
+    {% load static %}
+    {% block static %}
 
-{% endblock %}
+        {% endblock %}
 
-{% include "parts/footer.html" %}
+<link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
+
+</head>
+<body>
+    {% include "parts/navbar.html" %}
+    <div class="container">
+        {% block content %}
+
+        {% endblock %}
+    </div>
+
+
+</body>
+</html>
+
+<!DOCTYPE html>
+
+
