--- a/templates/parts/navbar.html
+++ b/templates/parts/navbar.html
@@ -1,6 +1,11 @@
-<ul>
-    <li><a href="{% url 'index' %}">home</a></li>
-    <li><a href="{% url 'about' %}">about</a></li>
-    
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/navbar.css' %}">
 
-</ul>
+<div class="navbar">
+    <div class="logo"><img src="{% static 'images/myLogo.png' %}" alt=""></div>
+    <ul>
+        <li><a href="{% url 'index' %}">home</a></li>
+        <li><a href="{% url 'about' %}">about</a></li>
+        <li><a href="{% url 'products' %}">products</a></li>
+    </ul>
+</div>
